refactor: text changes

--- a/index.html
+++ b/index.html
@@ -58,18 +58,13 @@
           <article>
             <h1>About us!</h1>
             <p>
-              We are GreatUniHack, an annual 24-hour student-oriented hackathon
-              organised by the University of Manchester tech society, UniCS.
+              We are GreatUniHack, an annual 24-hour student-oriented hackathon organised by the University of Manchester tech society, UniCS.
             </p>
             <p>
-              Since 2014, we have brought together students from 88 universities across
-              Europe to work and develop innovative ideas in a competitive
-              environment.
+              Since 2014, we have brought together 2500 students from 88 universities across Europe to work and develop innovative ideas in a competitive environment.
             </p>
             <p>
-              This year's edition aims to introduce a new generation
-              of developers with great potential for improving the technology
-              industry and community.
+              This year's edition aims to introduce a new generation of developers with great potential for improving the technology industry and community through our online hackathon. 
             </p>
           </article>
           <aside>
@@ -97,8 +92,7 @@
                 <img src="./res/faq/money-bag.png" alt="">
                 <h4>How much does it cost?</h4>
                 <p>
-                  GreatUniHack is <b>free</b> for all accepted hackers. We will provide you
-                  WiFi, meals, swag, workshops and…..<b>fun!</b>
+                  GreatUniHack is free for all accepted hackers. We will provide you with swag, cool workshops, a few prizes and… fun! 
                 </p>
               </div>
               <div class="card">
@@ -110,8 +104,8 @@
               </div>
               <div class="card">
                 <img src="./res/faq/check-mark.png" alt="">
-                <h4>What should I bring?</h4>
-                <p>All attendees must bring a valid ID for admission. Other common checklist items include: laptops, chargers, sleeping bags and toiletries.</p>
+                <h4>What should I use/bring to this Hackathon?</h4>
+                <p>Make sure you have got your laptop, chargers, phone for some games and good internet.</p>
               </div>
               <div class="card">
                 <img src="./res/faq/contract.png" alt="">
@@ -121,7 +115,7 @@
               <div class="card">
                 <img src="./res/faq/legal-paper.png" alt="">
                 <h4>Do you have a code of conduct?</h4>
-                <p>Yes! <br> Smile, be nice and have fun, but all the other details can be found in our <a href="" id="conduct" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
+                <p>Yes! <br> Smile, be nice and have fun, but all the other details can be found in our <a href="https://docs.google.com/document/d/1a9Z-KLfYwYoB7EqCpVDrGZxHltKvrCVggv2i32EtFF0/edit?usp=sharing" id="conduct" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
               </div>
               <div class="card">
                 <img src="./res/faq/coding.png" alt="">
@@ -131,7 +125,7 @@
               <div class="card">
                 <img src="./res/faq/followers.png" alt="">
                 <h4>What can I expect from GreatUniHack?</h4>
-                <p>An entire weekend of great company, good food and plenty of swag! We’ll also have hardware and tons of mentors.</p>
+                <p>An entire weekend of great company, good entertainment and plenty of swag! We’ll also have a tons of mentors & loads of assistance.</p>
               </div>
               <div class="card">
                 <img src="./res/faq/copyright.png" alt="">
