feat: add theme info to site

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <div>
           <h2 class="event-date">28th - 29th November<br />@MANCHESTER</h2>
           <h1 id="event-time" class="event-time">00:00:00:00</h1>
-          <p class="event-description">Another year, another theme, another coding challenge</p>
+          <p class="event-description">
+            Another year, another theme, another coding challenge.<br/>
+            <span class="lightened">The theme for GreatUniHack 2020 is</span> <span class="shadow">Elemental</span>.
+          </p>
           <div class="buttons">
             <a href="https://apply.greatunihack.com" class="highlight-button">Apply</a>
             <a href="#about" class="learn-more-button">Learn more</a>
@@ -125,7 +128,7 @@
               <div class="card">
                 <img src="./res/faq/followers.png" alt="">
                 <h4>What can I expect from GreatUniHack?</h4>
-                <p>An entire weekend of great company, good entertainment and plenty of swag! We’ll also have a tons of mentors & loads of assistance.</p>
+                <p>An entire weekend of great company, good entertainment and plenty of swag! We’ll also have a tons of mentors & loads of assistance. This year, we have an <b>elemental theme</b> with lots of entertainment surrounding this.</p>
               </div>
               <div class="card">
                 <img src="./res/faq/copyright.png" alt="">
