refactor: fuzzy labs is now a silver sponsor

--- a/index.html
+++ b/index.html
@@ -177,16 +177,12 @@
             <div>
               <div>
                 <img class="medal" src="./res/sponsors/silver.png" alt="">
-                <p>Silver Sponsor</p>
+                <p>Silver Sponsors</p>
               </div>
-              <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
-            </div>
-            <div>
               <div>
-                <img class="medal" src="./res/sponsors/bronze.png" alt="">
-                <p>Bronze Sponsor</p>
+                <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
+                <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
               </div>
-              <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
             </div>
           </article>
         </div>
