fix: icons, logo, medals clearer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="#about" class="learn-more-button">Learn more</a>
           </div>
         </div>
-        <img id="logo" src="res/guhlogo.png" alt="" />
+        <img id="logo" src="./res/Logo.png" alt="" />
       </div>
     </header>
     <main class="roboto">
@@ -89,7 +89,7 @@
           <h1>Frequently Asked Questions</h1>
           <article>
               <div class="card">
-                <img src="./res/faq/hacker.png" alt="">
+                <img src="./res/icons/hacker.png" alt="">
                 <h4>What is a HACKATHON?</h4>
                 <p>
                   Hackathons are awesome events full of creativity, tech and
@@ -99,46 +99,46 @@
                 </p>
               </div>
               <div class="card">
-                <img src="./res/faq/money-bag.png" alt="">
+                <img src="./res/icons/money-bag-2.png" alt="">
                 <h4>How much does it cost?</h4>
                 <p>
                   GreatUniHack is free for all accepted hackers. We will provide you with swag, cool workshops, a few prizes and… fun! 
                 </p>
               </div>
               <div class="card">
-                <img src="./res/faq/group.png" alt="">
+                <img src="./res/icons/group.png" alt="">
                 <h4>What if I don’t have a team?</h4>
                 <p>
                   No need to worry! Part of the fun of a hackathon is meeting new people. We will have time at the beginning of the event for everyone to meet and form teams.
                 </p>
               </div>
               <div class="card">
-                <img src="./res/faq/check-mark.png" alt="">
+                <img src="./res/icons/check-mark.png" alt="">
                 <h4>What should I use/bring to this Hackathon?</h4>
                 <p>Make sure you have got your laptop, chargers, phone for some games and good internet.</p>
               </div>
               <div class="card">
-                <img src="./res/faq/contract.png" alt="">
+                <img src="./res/icons/contract.png" alt="">
                 <h4>Who can apply?</h4>
                 <p>We accept students who are over 18 and are currently studying or have graduated less than 1 year ago. You can also join us as a mentor! Contact us for more info.</p>
               </div>
               <div class="card">
-                <img src="./res/faq/legal-paper.png" alt="">
+                <img src="./res/icons/legal-paper.png" alt="">
                 <h4>Do you have a code of conduct?</h4>
                 <p>Yes! <br> Smile, be nice and have fun, but all the other details can be found in our <a href="https://docs.google.com/document/d/1a9Z-KLfYwYoB7EqCpVDrGZxHltKvrCVggv2i32EtFF0/edit?usp=sharing" id="conduct" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
               </div>
               <div class="card">
-                <img src="./res/faq/coding.png" alt="">
+                <img src="./res/icons/coding.png" alt="">
                 <h4>I don’t know how to code. Can I still participate?</h4>
                 <p>Hackathons are for beginners. There is an amazing suit of industry experts and mentors that are happy to assist you!</p>
               </div>
               <div class="card">
-                <img src="./res/faq/followers.png" alt="">
+                <img src="./res/icons/followers.png" alt="">
                 <h4>What can I expect from GreatUniHack?</h4>
                 <p>An entire weekend of great company, good entertainment and plenty of swag! We’ll also have a tons of mentors & loads of assistance. This year, we have an <b>elemental theme</b> with lots of entertainment surrounding this.</p>
               </div>
               <div class="card">
-                <img src="./res/faq/copyright.png" alt="">
+                <img src="./res/icons/copyright.png" alt="">
                 <h4>Who owns my IP rights, code and idea?</h4>
                 <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
               </div>
@@ -176,14 +176,14 @@
           <article id="medals">
             <div>
               <div>
-                <img class="medal" src="./res/sponsors/gold.png" alt="">
+                <img class="medal" src="./res/sponsors/gold-medal.png" alt="">
                 <p>Gold Sponsor</p>
               </div>
               <img class="sponsor" src="./res/sponsors/bet365.png" alt="">
             </div>
             <div>
               <div>
-                <img class="medal" src="./res/sponsors/silver.png" alt="">
+                <img class="medal" src="./res/sponsors/silver-medal.png" alt="">
                 <p>Silver Sponsors</p>
               </div>
               <div>
