feat: compressed sponsor assets

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <img class="medal" src="./res/sponsors/gold-medal.png" alt="">
                 <p>Gold Sponsor</p>
               </div>
-              <img class="sponsor bet365" src="./res/sponsors/bet365_1.png" alt="">
+              <img class="sponsor bet365" src="./res/sponsors/bet365.png" alt="">
             </div>
             <div>
               <div>
@@ -187,8 +187,8 @@
                 <p>Silver Sponsors</p>
               </div>
               <div>
-                <img class="sponsor" src="./res/sponsors/bloomberg_1.png" alt="">
-                <img class="sponsor" src="./res/sponsors/fuzzylabs_1.png" alt="">
+                <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
+                <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
               </div>
             </div>
           </article>
