fix: most of the lighthouse issues

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -8,10 +9,6 @@
     <link rel="stylesheet" href="css/style.css?v=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&family=Sarabun:wght@200;500;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
     <link
@@ -46,7 +43,7 @@
     <header>
       <div class="container sarabun col2">
         <div>
-          <h2 class="event-date">28th - 29th November<br />@MANCHESTER</h2>
+          <h2 class="event-date">28th - 29th November<br />@ MANCHESTER</h2>
           <h1 id="event-time" class="event-time">00:00:00:00</h1>
           <p class="event-description">
             Another year, another theme, another coding challenge.<br/>
