feat: update the site with new sponsors, add links

--- a/index.html
+++ b/index.html
@@ -195,19 +195,31 @@
           <article id="medals">
             <div>
               <div>
+                <img class="medal" src="./res/sponsors/platinum-medal.png" alt="">
+                <p>Platinum Sponsor</p>
+              </div>
+              <div class="sponsorsimgs">
+                <a href="https://www.booking.com/" target="_blank" rel="noreferrer"><img class="sponsor" src="./res/sponsors/bookingcom.png" alt="Booking.com"></a>
+              </div>
+            </div>
+            <div>
+              <div>
                 <img class="medal" src="./res/sponsors/gold-medal.png" alt="">
                 <p>Gold Sponsor</p>
               </div>
-              <img class="sponsor bet365" src="./res/sponsors/bet365.png" alt="">
+              <div class="sponsorsimgs">
+                <a href="https://www.bet365.com/" target="_blank" rel="noreferrer"><img class="sponsor bet365" src="./res/sponsors/bet365.png" alt="Bet365"></a>
+              </div>
             </div>
             <div>
               <div>
                 <img class="medal" src="./res/sponsors/silver-medal.png" alt="">
                 <p>Silver Sponsors</p>
               </div>
-              <div>
-                <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
-                <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
+              <div class="sponsorsimgs">
+                <a href="https://www.bloomberg.com/" target="_blank" rel="noreferrer"><img class="sponsor" src="./res/sponsors/bloomberg.png" alt="Bloomberg"></a>
+                <a href="https://fuzzylabs.ai/" target="_blank" rel="noreferrer"><img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="FuzzyLabs"></a>
+                <a href="https://www.recoursemedical.com/" target="_blank" rel="noreferrer"><img class="sponsor" src="./res/sponsors/recourseai.png" alt="Recourse AI"></a>
               </div>
             </div>
           </article>
