feat: add Morgan Stanley

--- a/index.html
+++ b/index.html
@@ -222,6 +222,15 @@
                 <a href="https://www.recoursemedical.com/" target="_blank" rel="noreferrer"><img class="sponsor" src="./res/sponsors/recourseai.png" alt="Recourse AI"></a>
               </div>
             </div>
+            <div>
+              <div>
+                <img class="medal" src="./res/sponsors/bronze-medal.png" alt="">
+                <p>Bronze Sponsor</p>
+              </div>
+              <div class="sponsorsimgs">
+                <a href="https://www.morganstanley.com/" target="_blank" rel="noreferrer"><img class="sponsor" src="./res/sponsors/morgan-stanley.png" alt="Morgan Stanley"></a>
+              </div>
+            </div>
           </article>
         </div>
       </section>
