feat: update homepage

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span class="lightened">The theme for GreatUniHack 2020 is</span> <span class="shadow">Elemental</span>.
           </p>
           <div class="buttons">
-            <a href="https://apply.greatunihack.com" class="highlight-button">Apply</a>
+            <a href="https://hub.greatunihack.com" class="highlight-button">Start!</a>
             <a href="#about" class="learn-more-button">Learn more</a>
           </div>
         </div>
